--- a/de/mail/chrome/messenger/activity.properties
+++ b/de/mail/chrome/messenger/activity.properties
@@ -13,16 +13,21 @@ yesterday=Gestern
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#2. #1
 
-# Send Message
+# LOCALIZATION NOTE (sendingMessages): this is used as a title for grouping processes in the activity manager when sending email.
+sendingMessages=Nachrichten werden gesendet
+# LOCALIZATION NOTE (sendingMessageWithSubject): %S will be replaced by the subject of the message being sent.
 sendingMessage=Nachricht wird gesendet
-# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
-sendingMessageTo=Nachricht wird gesendet an %S
+sendingMessageWithSubject=Nachricht wird gesendet: %S
+copyMessage=Nachricht wird in den Ordner für gesendete Nachrichten kopiert
 sentMessage=Nachricht wurde gesendet
-# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
-sentMessageTo=Nachricht wurde gesendet an %S
+# LOCALIZATION NOTE (sentMessageWithSubject): %S will be replaced by the subject of the message being sent.
+sentMessageWithSubject=Nachricht wurde gesendet: %S
 failedToSendMessage=Senden der Nachricht ist fehlgeschlagen
-# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
-failedToSendMessageTo=Senden der Nachricht an %S ist fehlgeschlagen
+failedToCopyMessage=Failed to copy message
+# LOCALIZATION NOTE (failedToSendMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToSendMessageWithSubject=Senden der Nachricht ist fehlgeschlagen: %S
+# LOCALIZATION NOTE (failedToCopyMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToCopyMessageWithSubject=Kopieren der Nachricht ist fehlgeschlagen: %S
 
 # LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
