--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -484,6 +484,11 @@ headerFieldYou=já
 # The what's new tab title, shown on version update
 whatsNew=Co je nového
 
+applyToCollapsedMsgsTitle=Potvrzení smazání zpráv ve sbalených vláknech
+applyToCollapsedMsgs=Upozornění - tato akce smaže zprávy ve sbalených vláknech
+applyToCollapsedAlwaysAskCheckbox=Vždy se dotázat před smazáním zpráv ve sbalených vláknech
+applyNowButton=Smazat
+
 #LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
 # glodaWhyColumn when performing a gloda-backed search, explaining why a
 # specific result is present in the search.  Because of how the message grouping
