--- a/de/mail/chrome/messenger/multimessageview.properties
+++ b/de/mail/chrome/messenger/multimessageview.properties
@@ -5,7 +5,7 @@
 selectedNMessages=Ausgewählt: #1 Nachricht;Ausgewählt: #1 Nachrichten
 # #1 number of threads
 # example: across 3 threads
-acrossNThreads= über #1 Thema; über #1 Themen
+acrossNThreads= in #1 Thema; querdurch #1 Themen
 
 numMsgs=#1 Nachricht;#1 Nachrichten
 countUnread=, #1 ungelesene;, #1 ungelesene
