--- a/sv-SE/mail/chrome/messenger/activity.properties
+++ b/sv-SE/mail/chrome/messenger/activity.properties
@@ -13,16 +13,21 @@ yesterday=Igår
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#2 #1
 
-# Send Message
+# LOCALIZATION NOTE (sendingMessages): this is used as a title for grouping processes in the activity manager when sending email.
+sendingMessages=Skickar meddelanden
+# LOCALIZATION NOTE (sendingMessageWithSubject): %S will be replaced by the subject of the message being sent.
 sendingMessage=Skickar meddelande
-# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
-sendingMessageTo=Skickar meddelande till %S
+sendingMessageWithSubject=Skickar meddelande: %S
+copyMessage=Kopierar meddelande till mappen Skickat
 sentMessage=Skickat meddelande
-# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
-sentMessageTo=Skickat meddelande till %S
+# LOCALIZATION NOTE (sentMessageWithSubject): %S will be replaced by the subject of the message being sent.
+sentMessageWithSubject=Skickat meddelande: %S
 failedToSendMessage=Kunde inte skicka meddelande
-# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
-failedToSendMessageTo=Kunde inte skicka meddelande till %S
+failedToCopyMessage=Kunde inte kopiera meddelande
+# LOCALIZATION NOTE (failedToSendMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToSendMessageWithSubject=Kunde inte skicka meddelande: %S
+# LOCALIZATION NOTE (failedToCopyMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToCopyMessageWithSubject=Kunde inte kopiera meddelande: %S
 
 # LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
